sidebar node collapse fix

--- a/docs/ui/docs/docs.module.scss
+++ b/docs/ui/docs/docs.module.scss
@@ -33,6 +33,6 @@
   min-width: 100px;
   max-width: 85%;
   position: relative;
-
+  overflow: hidden;
   height: 100%;
 }
